[algovi-6] command handler base

--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -1,1 +1,25 @@
+set ( ALGOVI_CONTROLLER_LIB_NAME "algoviController" )
+
+set ( ALGOVI_CONTROLLER_LIB_SOURCES
+    "CController.hpp"
+    "private/CController.cpp"
+)
+
+add_library ( ${ALGOVI_CONTROLLER_LIB_NAME} STATIC ${ALGOVI_CONTROLLER_LIB_SOURCES} )
+
+target_link_libraries ( ${ALGOVI_CONTROLLER_LIB_NAME}
+   ${ALGOVI_GUI_LIB_NAME}
+)
+
+qt5_use_modules ( ${ALGOVI_CONTROLLER_LIB_NAME} Widgets Core)
+
+install (
+    TARGETS
+    ${ALGOVI_CONTROLLER_LIB_NAME}
+    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
+    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
+    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
+    )
+
+
 add_subdirectory ( terminal )
