--- a/framework/commands/CMakeLists.txt
+++ b/framework/commands/CMakeLists.txt
@@ -5,6 +5,10 @@ set ( TERMINAL_COMMANDS_LIB_SOURCES
     "ITerminalSignals.hpp"
     "CTerminalCommandBase.hpp"
     "private/CTerminalCommandBase.cpp"
+    "CSystemCommand.hpp"
+    "private/CSystemCommand.cpp"
+    "CPythonShell.hpp"
+    "private/CPythonShell.cpp"
     )
 
 add_library ( ${TERMINAL_COMMANDS_LIB_NAME} STATIC ${TERMINAL_COMMANDS_LIB_SOURCES} )
