[algovi] Python command

--- a/algovi/CMakeLists.txt
+++ b/algovi/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable ( ${ALGOVI_APP_NAME} ${ALGOVI_APP_SOURCES} )
 target_link_libraries( ${ALGOVI_APP_NAME}
     ${ALGOVI_GUI_LIB_NAME}
     ${ALGOVI_CONTROLLER_LIB_NAME}
+    ${TERMINAL_COMMANDS_LIB_NAME}
     )
 
 qt5_use_modules ( ${ALGOVI_APP_NAME} Core Widgets)
