[algovi-13] file system base

--- a/controller/terminal/CMakeLists.txt
+++ b/controller/terminal/CMakeLists.txt
@@ -12,6 +12,10 @@ set ( TERMINAL_LIB_SOURCES
 
 add_library ( ${TERMINAL_LIB_NAME} STATIC ${TERMINAL_LIB_SOURCES} )
 
+target_link_libraries ( ${TERMINAL_LIB_NAME}
+    ${FILESYSTEM_LIB_NAME}
+    )
+
 qt5_use_modules ( ${TERMINAL_LIB_NAME} Widgets Core)
 
 install (
