[algovi-12] complation, first approach

--- a/controller/terminal/CMakeLists.txt
+++ b/controller/terminal/CMakeLists.txt
@@ -6,14 +6,18 @@ set ( TERMINAL_LIB_SOURCES
     "private/CTerminalBase.cpp"
     "CPlainTextTerminal.hpp"
     "private/CPlainTextTerminal.cpp"
+    "private/CPlainTextTerminalImpl.hpp"
+    "private/CPlainTextTerminalImpl.cpp"
     "TerminalHelpers.hpp"
     "private/TerminalHelpers.cpp"
+    ""
     )
 
 add_library ( ${TERMINAL_LIB_NAME} STATIC ${TERMINAL_LIB_SOURCES} )
 
 target_link_libraries ( ${TERMINAL_LIB_NAME}
     ${FILESYSTEM_LIB_NAME}
+    ${COMPLATION_LIB_NAME}
     )
 
 qt5_use_modules ( ${TERMINAL_LIB_NAME} Widgets Core)
