--- a/framework/commands/CMakeLists.txt
+++ b/framework/commands/CMakeLists.txt
@@ -15,6 +15,8 @@ set ( TERMINAL_COMMANDS_LIB_SOURCES
     "private/CCompiler.cpp"
     "private/CCompilerExecutor.hpp"
     "private/CCompilerExecutor.cpp"
+    "parser/CParserCommand.hpp"
+    "parser/private/CParserCommand.cpp"
     )
 
 add_library ( ${TERMINAL_COMMANDS_LIB_NAME} STATIC ${TERMINAL_COMMANDS_LIB_SOURCES} )
