[algovi-24] default parsers

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory ( commands )
 add_subdirectory ( filesystem )
 add_subdirectory ( complation )
+add_subdirectory ( commands/parser/parsers )
