[algovi-44] handle tests with novile editor

--- a/externalLibs/CMakeLists.txt
+++ b/externalLibs/CMakeLists.txt
@@ -1,3 +1,5 @@
 INCLUDE_DIRECTORIES ( testlib )
-
 ADD_SUBDIRECTORY ( testlib )
+
+INCLUDE_DIRECTORIES ( novileEditor )
+ADD_SUBDIRECTORY ( novileEditor )
