--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -3,12 +3,16 @@ set ( ALGOVI_GUI_LIB_NAME "algoviGui" )
 set ( ALGOVI_GUI_LIB_SOURCES
     "CMainWindow.hpp"
     "private/CMainWindow.cpp"
+    "CTestEditor.hpp"
+    "private/CTestEditor.cpp"
     )
 
 add_library ( ${ALGOVI_GUI_LIB_NAME} STATIC ${ALGOVI_GUI_LIB_SOURCES} )
 
 target_link_libraries( ${ALGOVI_GUI_LIB_NAME}
-    ${TERMINAL_LIB_NAME} )
+    ${TERMINAL_LIB_NAME}
+    ${NOVILE_EDITOR_LIB_NAME}
+    )
 
 qt5_use_modules ( ${ALGOVI_GUI_LIB_NAME} Widgets Core)
 
