--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory ( commands )
 add_subdirectory ( filesystem )
 add_subdirectory ( complation )
 add_subdirectory ( commands/parser/parsers )
+add_subdirectory ( settings )
