[algovi-36~38] command config

--- a/algovi/CMakeLists.txt
+++ b/algovi/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries( ${ALGOVI_APP_NAME}
     ${ALGOVI_GUI_LIB_NAME}
     ${ALGOVI_CONTROLLER_LIB_NAME}
     ${TERMINAL_COMMANDS_LIB_NAME}
+    ${SETTINGS_LIB_NAME}
     )
 
 qt5_use_modules ( ${ALGOVI_APP_NAME} Core Widgets Network)
