[algovi] webkit issue

--- a/externalLibs/CMakeLists.txt
+++ b/externalLibs/CMakeLists.txt
@@ -1,5 +1,7 @@
 INCLUDE_DIRECTORIES ( testlib )
 ADD_SUBDIRECTORY ( testlib )
 
-INCLUDE_DIRECTORIES ( novileEditor )
-ADD_SUBDIRECTORY ( novileEditor )
+if (ALGOVI_HAS_QTWEBKIT)
+    INCLUDE_DIRECTORIES ( novileEditor )
+    ADD_SUBDIRECTORY ( novileEditor )
+endif ()
