--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,3 +56,4 @@ add_subdirectory ( "framework" )
 add_subdirectory ( "gui" )
 add_subdirectory ( "controller" )
 add_subdirectory ( "externalLibs" )
+add_subdirectory ( "view" )
