--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory ( filesystem )
 add_subdirectory ( complation )
 add_subdirectory ( commands/parser/parsers )
 add_subdirectory ( settings )
+add_subdirectory ( tests )
